fix: replace `word-wrap: word-break` with `word-break: break-word`

--- a/src/main/scss/base/_style.scss
+++ b/src/main/scss/base/_style.scss
@@ -290,7 +290,7 @@ pre.console {
   display: none; /* hidden until loaded */
   padding: 1rem;
   margin: 1rem 0;
-  word-break: word-break;
+  word-break: break-word;
   border-radius: var(--form-input-border-radius);
   background-color: var(--button-background);
   border: var(--jenkins-border--subtle);
